Identifier validity conditions